@@ -6,6 +6,11 @@ NEW FEATURES
 * `ReadCrossRef` now uses the [newer CrossRef API](https://github.com/CrossRef/rest-api-doc/blob/master/rest_api.md) and gains arguments `filter` and `offset` to use with the new API; an
 additional argument `use.old.api` is added if the user wishes to use the old API
 (h/t Carl Boettiger)
+* `ReadCrossRef` now parses the results returned by CrossRef to
+create the `BibEntry` object when using the new API; for the old API (and hence, older
+versions of the package) the query only returns DOIs and `ReadCrossRef` would then
+use the DOIs to request the corresponding BibTeX entries from CrossRef (i.e. less
+HTTP requests when using the new API)
 
 BUG FIXES
 
@@ -15,6 +20,8 @@ generation contains a non-ascii character (h/t Mark Johnson)
 ([PR\#17138](https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=17138)) that
 is occasionally encountered when that function processes an unknown
 macro (h/t Eric Bryant)
+* Entries with no title field can now be printed without error when
+`BibOptions()$check.entries` is *not* set to "error" (default is "error")
 
 Changes in Version 0.10.15 (2016-06-06)
 --------------------------------------------------------
